# langrpg

./: .env  .env.default  .gitignore  Cargo.toml
dev/: .env.default  casdoor.Dockerfile  docker-compose.yaml  dump-casdoor-202601081113.sql  init.sh
html/: index.html  test.http
main/: Cargo.toml
main/migrations/: 20240510163001_base_tables.down.sql  20240510163001_base_tables.up.sql
main/src/: app_state.rs  auth.rs  client.rs  command.rs  config.rs  main.rs  route.rs  state_dispatcher.rs  states.rs  ws.rs
main/src/game/: mod.rs
main/src/world/: mod.rs
test_storange/maps/map1/: map1.ldtk
