[workspace]
members = [
    "main"
]

[workspace.dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"]}
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
headers = "0.4.0"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.21.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.199", features = ["derive"] }
casdoor-rust-sdk = "1.3.0"
serde_json = "1.0.116"
once_cell = "1.8"
dotenvy = "0.15.7"