[workspace]
members = [
    "main"
]

[workspace.dependencies]
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"]}
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
headers = "0.4.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.7", features = ["fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.228", features = ["derive"] }
casdoor-rust-sdk = "1.3.0"
serde_json = "1.0.145"
once_cell = "1.21.3"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres"] }
bytes = { version = "1.11.0" }
async-trait = { version = "0.1.89" }
