[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }