[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-extra = { workspase = true, features = ["typed-header"] }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
headers = "0.4.0"
serde = { workspace = true }