[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-extra = { workspase = true, features = ["typed-header"] }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
headers = { workspace = true }
serde = { workspace = true }
casdoor-rust-sdk = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }